crates/oxc_angular_compiler/tests/snapshots/integration_test__selector_attrs_const_emission.snap
---
source: crates/oxc_angular_compiler/tests/integration_test.rs
expression: result.code
---

import { Component } from '@angular/core';
import * as i0 from '@angular/core';

const _c0 = ["bitBadge",""];
const _c1 = ["*"];

export class BadgeComponent {
static ɵfac = function BadgeComponent_Factory(__ngFactoryType__) {
  return new (__ngFactoryType__ || BadgeComponent)();
};
static ɵcmp = /*@__PURE__*/ i0.ɵɵdefineComponent({type:BadgeComponent,selectors:[["span","bitBadge",
    ""]],attrs:_c0,ngContentSelectors:_c1,decls:1,vars:0,template:function BadgeComponent_Template(rf,
    ctx) {
  if ((rf & 1)) {
    i0.ɵɵprojectionDef();
    i0.ɵɵprojection(0);
  }
},encapsulation:2});
}
(() =>{
  (((typeof ngDevMode === "undefined") || ngDevMode) && i0.ɵsetClassDebugInfo(BadgeComponent,
      {className:"BadgeComponent",filePath:"badge.component.ts",lineNumber:9}));
})();
(() =>{
  (((typeof ngDevMode === "undefined") || ngDevMode) && i0.ɵsetClassMetadata(BadgeComponent,
      [{type:Component,args:[{selector:"span[bitBadge]",template:"<ng-content></ng-content>",
          standalone:true}]}],null,null));
})();
