crates/oxc_angular_compiler/tests/snapshots/integration_test__spread_in_arrow_function_body.snap
---
source: crates/oxc_angular_compiler/tests/integration_test.rs
expression: js
---
function TestComponent_Template(rf,ctx) {
  if ((rf & 1)) {
    i0.ɵɵelementStart(0,"button",0);
    i0.ɵɵlistener("click",function TestComponent_Template_button_click_0_listener() {
      return ctx.handler(() =>[...ctx.base,"extra"]);
    });
    i0.ɵɵtext(1,"click");
    i0.ɵɵelementEnd();
  }
}
