crates/oxc_angular_compiler/tests/snapshots/integration_test__standalone_component_uses_full_mode.snap
---
source: crates/oxc_angular_compiler/tests/integration_test.rs
expression: result.code
---

import { Component } from '@angular/core';
import * as i0 from '@angular/core';

function ExternalComponent_For_5_Template(rf,ctx) {
  if ((rf & 1)) {
    i0.ɵɵelementStart(0,"li");
    i0.ɵɵtext(1);
    i0.ɵɵelementEnd();
  }
  if ((rf & 2)) {
    const item_r1 = ctx.$implicit;
    i0.ɵɵadvance();
    i0.ɵɵtextInterpolate(item_r1);
  }
}

export class ExternalComponent {
    title = 'External Component';
    items = ['Apple', 'Banana', 'Cherry'];

static ɵfac = function ExternalComponent_Factory(__ngFactoryType__) {
  return new (__ngFactoryType__ || ExternalComponent)();
};
static ɵcmp = /*@__PURE__*/ i0.ɵɵdefineComponent({type:ExternalComponent,selectors:[["app-external"]],
    decls:6,vars:1,consts:[[1,"container"]],template:function ExternalComponent_Template(rf,
        ctx) {
      if ((rf & 1)) {
        i0.ɵɵelementStart(0,"div",0)(1,"h2");
        i0.ɵɵtext(2);
        i0.ɵɵelementEnd();
        i0.ɵɵelementStart(3,"ul");
        i0.ɵɵrepeaterCreate(4,ExternalComponent_For_5_Template,2,1,"li",null,i0.ɵɵrepeaterTrackByIdentity);
        i0.ɵɵelementEnd()();
      }
      if ((rf & 2)) {
        i0.ɵɵadvance(2);
        i0.ɵɵtextInterpolate(ctx.title);
        i0.ɵɵadvance(2);
        i0.ɵɵrepeater(ctx.items);
      }
    },encapsulation:2});
}
(() =>{
  (((typeof ngDevMode === "undefined") || ngDevMode) && i0.ɵsetClassDebugInfo(ExternalComponent,
      {className:"ExternalComponent",filePath:"test.component.ts",lineNumber:9}));
})();
(() =>{
  (((typeof ngDevMode === "undefined") || ngDevMode) && i0.ɵsetClassMetadata(ExternalComponent,
      [{type:Component,args:[{selector:"app-external",template:"<div class=\"container\"><h2>{{ title }}</h2><ul>@for (item of items; track item) { <li>{{ item }}</li> }</ul></div>",
          standalone:true}]}],null,null));
})();
