crates/oxc_angular_compiler/tests/snapshots/integration_test__style_map_interpolation_angular_v19.snap
---
source: crates/oxc_angular_compiler/tests/integration_test.rs
expression: js
---
function TestComponent_Template(rf,ctx) {
  if ((rf & 1)) { i0.ɵɵelement(0,"div"); }
  if ((rf & 2)) { i0.ɵɵstyleMapInterpolate1("width:",ctx.expr,"px"); }
}
