crates/oxc_angular_compiler/tests/snapshots/integration_test__style_prop_interpolation_angular_v19_with_unit.snap
---
source: crates/oxc_angular_compiler/tests/integration_test.rs
expression: js
---
function TestComponent_Template(rf,ctx) {
  if ((rf & 1)) { i0.ɵɵelement(0,"div"); }
  if ((rf & 2)) { i0.ɵɵstylePropInterpolate1("width","prefix",ctx.size,"suffix","px"); }
}
