crates/oxc_angular_compiler/tests/snapshots/integration_test__switch_block_angular_v19.snap
---
source: crates/oxc_angular_compiler/tests/integration_test.rs
expression: js
---
function TestComponent_Case_0_Template(rf,ctx) {
  if ((rf & 1)) {
    i0.ɵɵtext(0," ");
    i0.ɵɵelementStart(1,"div");
    i0.ɵɵtext(2,"One");
    i0.ɵɵelementEnd();
    i0.ɵɵtext(3," ");
  }
}
function TestComponent_Case_1_Template(rf,ctx) {
  if ((rf & 1)) {
    i0.ɵɵtext(0," ");
    i0.ɵɵelementStart(1,"div");
    i0.ɵɵtext(2,"Two");
    i0.ɵɵelementEnd();
    i0.ɵɵtext(3," ");
  }
}
function TestComponent_Case_2_Template(rf,ctx) {
  if ((rf & 1)) {
    i0.ɵɵtext(0," ");
    i0.ɵɵelementStart(1,"div");
    i0.ɵɵtext(2,"Other");
    i0.ɵɵelementEnd();
    i0.ɵɵtext(3," ");
  }
}
function TestComponent_Template(rf,ctx) {
  if ((rf & 1)) { i0.ɵɵtemplate(0,TestComponent_Case_0_Template,4,0)(1,TestComponent_Case_1_Template,
      4,0)(2,TestComponent_Case_2_Template,4,0); }
  if ((rf & 2)) {
    let tmp_0_0;
    i0.ɵɵconditional((((tmp_0_0 = ctx.value) === 1)? 0: ((tmp_0_0 === 2)? 1: 2)));
  }
}
